// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Trendyol internal order snapshot awaiting 1`] = `
[
  {
    "claims": [],
    "customer": {
      "addresses": [
        {
          "addressLine": "Adres Bilgisi Yok",
          "addressLine1": "Adres Bilgisi Yok",
          "addressLine2": "",
          "city": "",
          "companyName": "",
          "countryCode": "TR",
          "email": "",
          "firstName": "MUSTERI",
          "isCorporate": false,
          "isDefaultBilling": false,
          "isDefaultShipping": true,
          "lastName": "",
          "phone": "",
          "postalCode": "",
          "state": "",
          "taxNumber": "",
          "taxOffice": "",
          "title": "Teslimat Adresi",
        },
        {
          "addressLine": "Adres Bilgisi Yok",
          "addressLine1": "Adres Bilgisi Yok",
          "addressLine2": "",
          "city": "",
          "companyName": "",
          "countryCode": "TR",
          "email": "",
          "firstName": "MUSTERI",
          "isCorporate": false,
          "isDefaultBilling": true,
          "isDefaultShipping": false,
          "lastName": "",
          "phone": "",
          "postalCode": "",
          "state": "",
          "taxNumber": "",
          "taxOffice": "",
          "title": "Fatura Adresi",
        },
      ],
      "companyName": "",
      "email": "q@w.e",
      "externalIdentities": [
        {
          "externalCustomerId": "TR-GUEST-MUSTERI",
          "integrationCode": "trendyol",
        },
      ],
      "firstName": "MUSTERI",
      "isCorporate": false,
      "isEmailMasked": false,
      "isPhoneMasked": false,
      "lastName": "",
      "phone": "",
      "taxNumber": "",
      "taxOffice": "",
    },
    "order": {
      "billingAddress": {
        "addressLine1": "Adres Bilgisi Yok",
        "addressLine2": "",
        "city": "",
        "companyName": "",
        "countryCode": "TR",
        "email": "",
        "firstName": "MUSTERI",
        "isCorporate": false,
        "lastName": "",
        "phone": "",
        "postalCode": "",
        "state": "",
        "taxNumber": "",
        "taxOffice": "",
      },
      "cancelReason": undefined,
      "cancelSource": "UNKNOWN",
      "customerFirstName": "MUSTERI",
      "customerLastName": "",
      "dates": {
        "deliveredDate": undefined,
        "estimatedDeliveryDate": undefined,
        "externalUpdatedAt": undefined,
        "orderDate": 2026-05-05T05:05:05.000Z,
        "shippedDate": undefined,
      },
      "externalOrderId": "9",
      "externalStatus": "Awaiting",
      "financials": {
        "currencyCode": "TRY",
        "grandTotal": 0,
        "shippingFee": 0,
        "subTotal": 0,
        "totalDiscount": 0,
        "totalTax": 0,
      },
      "flags": {
        "isAllocated": false,
        "isInvoiceGenerated": false,
        "isMetricsProcessed": false,
      },
      "fulfillment": [
        {
          "campaignCode": "",
          "carrierCode": "",
          "carrierName": "",
          "desi": 0,
          "shipmentMethod": "MARKETPLACE",
          "status": "PENDING",
          "trackingCode": "",
          "trackingUrl": "",
        },
      ],
      "integrationCode": "trendyol",
      "internalStatus": "UNAPPROVED",
      "invoice": {
        "invoiceLink": undefined,
        "invoiceMethod": "MARKETPLACE",
        "invoiceProvider": "TRENDYOL",
        "invoicedAt": undefined,
        "status": "PENDING",
      },
      "items": [
        {
          "barcode": "",
          "discountAmount": 0,
          "externalItemId": "1",
          "externalLineItemId": "1",
          "itemStatus": "ACTIVE",
          "productName": "İsimsiz Ürün",
          "quantity": 0,
          "sku": "",
          "taxRate": 0,
          "totalPrice": 0,
          "unitPrice": 0,
        },
      ],
      "meta": {
        "commercial": false,
        "customerEmail": "q@w.e",
        "etgbDate": undefined,
        "etgbNo": undefined,
        "giftBox": false,
        "id": 9,
        "lines": [
          {
            "id": 1,
          },
        ],
        "micro": false,
        "packageId": 9,
        "paymentMethod": undefined,
        "status": "Awaiting",
        "statusFlag": "paymentPending",
      },
      "orderNumber": "9",
      "shippingAddress": {
        "addressLine1": "Adres Bilgisi Yok",
        "addressLine2": "",
        "city": "",
        "companyName": "",
        "countryCode": "TR",
        "email": "",
        "firstName": "MUSTERI",
        "isCorporate": false,
        "lastName": "",
        "phone": "",
        "postalCode": "",
        "state": "",
        "taxNumber": "",
        "taxOffice": "",
      },
    },
  },
]
`;

exports[`Trendyol internal order snapshot cancelled 1`] = `
[
  {
    "claims": [],
    "customer": {
      "addresses": [
        {
          "addressLine": "Adres Bilgisi Yok",
          "addressLine1": "Adres Bilgisi Yok",
          "addressLine2": "",
          "city": "",
          "companyName": "",
          "countryCode": "TR",
          "email": "",
          "firstName": "Ali",
          "isCorporate": false,
          "isDefaultBilling": false,
          "isDefaultShipping": true,
          "lastName": "Veli Can",
          "phone": "",
          "postalCode": "",
          "state": "",
          "taxNumber": "",
          "taxOffice": "",
          "title": "Teslimat Adresi",
        },
        {
          "addressLine": "Adres Bilgisi Yok",
          "addressLine1": "Adres Bilgisi Yok",
          "addressLine2": "",
          "city": "",
          "companyName": "",
          "countryCode": "TR",
          "email": "",
          "firstName": "Ali",
          "isCorporate": false,
          "isDefaultBilling": true,
          "isDefaultShipping": false,
          "lastName": "Veli Can",
          "phone": "",
          "postalCode": "",
          "state": "",
          "taxNumber": "",
          "taxOffice": "",
          "title": "Fatura Adresi",
        },
      ],
      "companyName": "",
      "email": "",
      "externalIdentities": [
        {
          "externalCustomerId": "TR-GUEST-MUSTERI",
          "integrationCode": "trendyol",
        },
      ],
      "firstName": "MUSTERI",
      "isCorporate": false,
      "isEmailMasked": false,
      "isPhoneMasked": false,
      "lastName": "",
      "phone": "",
      "taxNumber": "",
      "taxOffice": "",
    },
    "order": {
      "billingAddress": {
        "addressLine1": "Adres Bilgisi Yok",
        "addressLine2": "",
        "city": "",
        "companyName": "",
        "countryCode": "TR",
        "email": "",
        "firstName": "Ali",
        "isCorporate": false,
        "lastName": "Veli Can",
        "phone": "",
        "postalCode": "",
        "state": "",
        "taxNumber": "",
        "taxOffice": "",
      },
      "cancelReason": "Musteri vazgecti",
      "cancelSource": "PLATFORM",
      "customerFirstName": "MUSTERI",
      "customerLastName": "",
      "dates": {
        "deliveredDate": undefined,
        "estimatedDeliveryDate": undefined,
        "externalUpdatedAt": undefined,
        "orderDate": 2026-01-10T08:00:00.000Z,
        "shippedDate": undefined,
      },
      "externalOrderId": "5",
      "externalStatus": "Cancelled",
      "financials": {
        "currencyCode": "TRY",
        "grandTotal": 0,
        "shippingFee": 0,
        "subTotal": 0,
        "totalDiscount": 0,
        "totalTax": 0,
      },
      "flags": {
        "isAllocated": false,
        "isInvoiceGenerated": false,
        "isMetricsProcessed": false,
      },
      "fulfillment": [
        {
          "campaignCode": "",
          "carrierCode": "",
          "carrierName": "",
          "desi": 0,
          "shipmentMethod": "MARKETPLACE",
          "status": "PENDING",
          "trackingCode": "",
          "trackingUrl": "",
        },
      ],
      "integrationCode": "trendyol",
      "internalStatus": "CANCELLED",
      "invoice": {
        "invoiceLink": undefined,
        "invoiceMethod": "MARKETPLACE",
        "invoiceProvider": "TRENDYOL",
        "invoicedAt": undefined,
        "status": "PENDING",
      },
      "items": [
        {
          "barcode": "",
          "discountAmount": 0,
          "externalItemId": "1",
          "externalLineItemId": "1",
          "itemStatus": "ACTIVE",
          "productName": "İsimsiz Ürün",
          "quantity": 1,
          "sku": "",
          "taxRate": 0,
          "totalPrice": 0,
          "unitPrice": 0,
        },
      ],
      "meta": {
        "commercial": false,
        "createdDate": 1768032000000,
        "etgbDate": undefined,
        "etgbNo": undefined,
        "giftBox": false,
        "id": 5,
        "lines": [
          {
            "id": 1,
            "quantity": 1,
            "reason": "r",
          },
        ],
        "micro": false,
        "orderNumber": "TY-2",
        "packageId": 5,
        "paymentMethod": undefined,
        "shipmentAddress": {
          "fullName": "Ali Veli Can",
        },
        "status": "Cancelled",
        "statusReason": "Musteri vazgecti",
      },
      "orderNumber": "TY-2",
      "shippingAddress": {
        "addressLine1": "Adres Bilgisi Yok",
        "addressLine2": "",
        "city": "",
        "companyName": "",
        "countryCode": "TR",
        "email": "",
        "firstName": "Ali",
        "isCorporate": false,
        "lastName": "Veli Can",
        "phone": "",
        "postalCode": "",
        "state": "",
        "taxNumber": "",
        "taxOffice": "",
      },
    },
  },
]
`;

exports[`Trendyol internal order snapshot full-invoiced 1`] = `
[
  {
    "claims": [],
    "customer": {
      "addresses": [
        {
          "addressLine": "A1 A2",
          "addressLine1": "A1",
          "addressLine2": "A2",
          "city": "Ist",
          "companyName": "Co",
          "countryCode": "TR",
          "email": "x@y.z",
          "firstName": "Ayse",
          "isCorporate": true,
          "isDefaultBilling": false,
          "isDefaultShipping": true,
          "lastName": "Su",
          "phone": "555",
          "postalCode": "34",
          "state": "Kad",
          "taxNumber": "11",
          "taxOffice": "VD",
          "title": "Teslimat Adresi",
        },
        {
          "addressLine": "A1 A2",
          "addressLine1": "A1",
          "addressLine2": "A2",
          "city": "Ist",
          "companyName": "Co",
          "countryCode": "TR",
          "email": "x@y.z",
          "firstName": "Ayse",
          "isCorporate": true,
          "isDefaultBilling": true,
          "isDefaultShipping": false,
          "lastName": "Su",
          "phone": "666",
          "postalCode": "34",
          "state": "Kad",
          "taxNumber": "11",
          "taxOffice": "VD",
          "title": "Fatura Adresi",
        },
      ],
      "companyName": "Co",
      "email": "a@trendyol.com",
      "externalIdentities": [
        {
          "externalCustomerId": "7",
          "integrationCode": "trendyol",
        },
      ],
      "firstName": "Ayse",
      "isCorporate": true,
      "isEmailMasked": true,
      "isPhoneMasked": false,
      "lastName": "Su",
      "phone": "555",
      "taxNumber": "11",
      "taxOffice": "VD",
    },
    "order": {
      "billingAddress": {
        "addressLine1": "A1",
        "addressLine2": "A2",
        "city": "Ist",
        "companyName": "Co",
        "countryCode": "TR",
        "email": "x@y.z",
        "firstName": "Ayse",
        "isCorporate": true,
        "lastName": "Su",
        "phone": "666",
        "postalCode": "34",
        "state": "Kad",
        "taxNumber": "11",
        "taxOffice": "VD",
      },
      "cancelReason": undefined,
      "cancelSource": "UNKNOWN",
      "customerFirstName": "Ayse",
      "customerLastName": "Su",
      "dates": {
        "deliveredDate": 2026-01-10T10:00:00.000Z,
        "estimatedDeliveryDate": 2026-01-11T08:00:00.000Z,
        "externalUpdatedAt": 2026-01-10T11:00:00.000Z,
        "orderDate": 2026-01-10T05:00:00.000Z,
        "shippedDate": 2026-01-10T09:00:00.000Z,
      },
      "externalOrderId": "123",
      "externalStatus": "Invoiced",
      "financials": {
        "currencyCode": "USD",
        "grandTotal": 190,
        "shippingFee": 8,
        "subTotal": 200,
        "totalDiscount": 10,
        "totalTax": 5,
      },
      "flags": {
        "isAllocated": false,
        "isInvoiceGenerated": true,
        "isMetricsProcessed": false,
      },
      "fulfillment": [
        {
          "campaignCode": "99",
          "carrierCode": "Yurtici",
          "carrierName": "Yurtici",
          "desi": 2,
          "shipmentMethod": "MARKETPLACE",
          "status": "SUCCESS",
          "trackingCode": "99",
          "trackingUrl": "http://t",
        },
      ],
      "integrationCode": "trendyol",
      "internalStatus": "APPROVED",
      "invoice": {
        "invoiceLink": "http://inv",
        "invoiceMethod": "MARKETPLACE",
        "invoiceProvider": "TRENDYOL",
        "invoicedAt": 2026-05-05T05:05:05.000Z,
        "status": "SUCCESS",
      },
      "items": [
        {
          "barcode": "BC",
          "discountAmount": 5,
          "externalItemId": "1",
          "externalLineItemId": "1",
          "itemStatus": "CANCELLED",
          "productName": "P",
          "quantity": 2,
          "sku": "SC",
          "taxRate": 18,
          "totalPrice": 200,
          "unitPrice": 100,
        },
        {
          "barcode": "",
          "discountAmount": 0,
          "externalItemId": "2",
          "externalLineItemId": "2",
          "itemStatus": "RETURNED",
          "productName": "İsimsiz Ürün",
          "quantity": 1,
          "sku": "",
          "taxRate": 0,
          "totalPrice": 10,
          "unitPrice": 10,
        },
      ],
      "meta": {
        "cargoAmount": 8,
        "cargoDeci": 2,
        "cargoProviderName": "Yurtici",
        "cargoTrackingLink": "http://t",
        "cargoTrackingNumber": 99,
        "commercial": true,
        "currencyCode": "USD",
        "customerEmail": "a@trendyol.com",
        "customerFirstName": "Ayse",
        "customerId": 7,
        "customerLastName": "Su",
        "customerPhone": "555",
        "deliveredDate": 1768039200000,
        "estimatedDeliveryEndDate": 1768118400000,
        "etgbDate": 1,
        "etgbNo": "E",
        "giftBox": true,
        "identityNumber": "111",
        "invoiceAddress": {
          "address1": "A1",
          "address2": "A2",
          "city": "Ist",
          "company": "Co",
          "district": "Kad",
          "email": "x@y.z",
          "firstName": "Ayse",
          "lastName": "Su",
          "phone": "666",
          "taxNumber": "11",
          "taxOffice": "VD",
          "zipCode": "34",
        },
        "invoiceLink": "http://inv",
        "lastModifiedDate": 1768042800000,
        "lines": [
          {
            "barcode": "BC",
            "lineId": 1,
            "lineTotalDiscount": 5,
            "lineUnitPrice": 100,
            "orderLineItemStatusName": "Cancelled",
            "productName": "P",
            "quantity": 2,
            "stockCode": "SC",
            "vatRate": 18,
          },
          {
            "id": 2,
            "lineItemPrice": 10,
            "price": 10,
            "quantity": 1,
            "status": "Returned",
          },
        ],
        "micro": true,
        "orderDate": 1768032000000,
        "orderNumber": "TY-1",
        "packageGrossAmount": 200,
        "packageId": 123,
        "packageTotalDiscount": 10,
        "packageTotalPrice": 190,
        "paymentMethod": "CC",
        "shipmentAddress": {
          "address1": "A1",
          "address2": "A2",
          "city": "Ist",
          "company": "Co",
          "district": "Kad",
          "email": "x@y.z",
          "firstName": "Ayse",
          "lastName": "Su",
          "phone": "555",
          "taxNumber": "11",
          "taxOffice": "VD",
          "zipCode": "34",
        },
        "shipmentPackageId": 123,
        "shippedDate": 1768035600000,
        "status": "Invoiced",
        "taxAmount": 5,
      },
      "orderNumber": "TY-1",
      "shippingAddress": {
        "addressLine1": "A1",
        "addressLine2": "A2",
        "city": "Ist",
        "companyName": "Co",
        "countryCode": "TR",
        "email": "x@y.z",
        "firstName": "Ayse",
        "isCorporate": true,
        "lastName": "Su",
        "phone": "555",
        "postalCode": "34",
        "state": "Kad",
        "taxNumber": "11",
        "taxOffice": "VD",
      },
    },
  },
]
`;

exports[`Trendyol internal order snapshot unknown 1`] = `
[
  {
    "claims": [],
    "customer": {
      "addresses": [
        {
          "addressLine": "Adres Bilgisi Yok",
          "addressLine1": "Adres Bilgisi Yok",
          "addressLine2": "",
          "city": "",
          "companyName": "",
          "countryCode": "TR",
          "email": "",
          "firstName": "MUSTERI",
          "isCorporate": false,
          "isDefaultBilling": false,
          "isDefaultShipping": true,
          "lastName": "",
          "phone": "",
          "postalCode": "",
          "state": "",
          "taxNumber": "",
          "taxOffice": "",
          "title": "Teslimat Adresi",
        },
        {
          "addressLine": "Adres Bilgisi Yok",
          "addressLine1": "Adres Bilgisi Yok",
          "addressLine2": "",
          "city": "",
          "companyName": "",
          "countryCode": "TR",
          "email": "",
          "firstName": "MUSTERI",
          "isCorporate": false,
          "isDefaultBilling": true,
          "isDefaultShipping": false,
          "lastName": "",
          "phone": "",
          "postalCode": "",
          "state": "",
          "taxNumber": "",
          "taxOffice": "",
          "title": "Fatura Adresi",
        },
      ],
      "companyName": "",
      "email": "",
      "externalIdentities": [
        {
          "externalCustomerId": "TR-GUEST-MUSTERI",
          "integrationCode": "trendyol",
        },
      ],
      "firstName": "MUSTERI",
      "isCorporate": false,
      "isEmailMasked": false,
      "isPhoneMasked": false,
      "lastName": "",
      "phone": "",
      "taxNumber": "",
      "taxOffice": "",
    },
    "order": {
      "billingAddress": {
        "addressLine1": "Adres Bilgisi Yok",
        "addressLine2": "",
        "city": "",
        "companyName": "",
        "countryCode": "TR",
        "email": "",
        "firstName": "MUSTERI",
        "isCorporate": false,
        "lastName": "",
        "phone": "",
        "postalCode": "",
        "state": "",
        "taxNumber": "",
        "taxOffice": "",
      },
      "cancelReason": undefined,
      "cancelSource": "UNKNOWN",
      "customerFirstName": "MUSTERI",
      "customerLastName": "",
      "dates": {
        "deliveredDate": undefined,
        "estimatedDeliveryDate": undefined,
        "externalUpdatedAt": undefined,
        "orderDate": 2026-01-10T08:00:00.000Z,
        "shippedDate": undefined,
      },
      "externalOrderId": "10",
      "externalStatus": "Brandnew",
      "financials": {
        "currencyCode": "TRY",
        "grandTotal": 0,
        "shippingFee": 0,
        "subTotal": 0,
        "totalDiscount": 0,
        "totalTax": 0,
      },
      "flags": {
        "isAllocated": false,
        "isInvoiceGenerated": false,
        "isMetricsProcessed": false,
      },
      "fulfillment": [
        {
          "campaignCode": "",
          "carrierCode": "",
          "carrierName": "",
          "desi": 0,
          "shipmentMethod": "MARKETPLACE",
          "status": "PENDING",
          "trackingCode": "",
          "trackingUrl": "",
        },
      ],
      "integrationCode": "trendyol",
      "internalStatus": "UNAPPROVED",
      "invoice": {
        "invoiceLink": undefined,
        "invoiceMethod": "MARKETPLACE",
        "invoiceProvider": "TRENDYOL",
        "invoicedAt": undefined,
        "status": "PENDING",
      },
      "items": [],
      "meta": {
        "commercial": false,
        "creationDate": 1768032000000,
        "etgbDate": undefined,
        "etgbNo": undefined,
        "giftBox": false,
        "id": 10,
        "lines": [],
        "micro": false,
        "orderDate": "",
        "packageId": 10,
        "paymentMethod": undefined,
        "status": "Brandnew",
        "statusFlag": "unknownStatus",
      },
      "orderNumber": "10",
      "shippingAddress": {
        "addressLine1": "Adres Bilgisi Yok",
        "addressLine2": "",
        "city": "",
        "companyName": "",
        "countryCode": "TR",
        "email": "",
        "firstName": "MUSTERI",
        "isCorporate": false,
        "lastName": "",
        "phone": "",
        "postalCode": "",
        "state": "",
        "taxNumber": "",
        "taxOffice": "",
      },
    },
  },
]
`;

exports[`Trendyol internal order snapshot unsupplied 1`] = `
[
  {
    "claims": [],
    "customer": {
      "addresses": [
        {
          "addressLine": "Adres Bilgisi Yok",
          "addressLine1": "Adres Bilgisi Yok",
          "addressLine2": "",
          "city": "",
          "companyName": "",
          "countryCode": "TR",
          "email": "",
          "firstName": "MUSTERI",
          "isCorporate": false,
          "isDefaultBilling": false,
          "isDefaultShipping": true,
          "lastName": "",
          "phone": "",
          "postalCode": "",
          "state": "",
          "taxNumber": "",
          "taxOffice": "",
          "title": "Teslimat Adresi",
        },
        {
          "addressLine": "Adres Bilgisi Yok",
          "addressLine1": "Adres Bilgisi Yok",
          "addressLine2": "",
          "city": "",
          "companyName": "",
          "countryCode": "TR",
          "email": "",
          "firstName": "MUSTERI",
          "isCorporate": false,
          "isDefaultBilling": true,
          "isDefaultShipping": false,
          "lastName": "",
          "phone": "",
          "postalCode": "",
          "state": "",
          "taxNumber": "",
          "taxOffice": "",
          "title": "Fatura Adresi",
        },
      ],
      "companyName": "",
      "email": "",
      "externalIdentities": [
        {
          "externalCustomerId": "TR-GUEST-MUSTERI",
          "integrationCode": "trendyol",
        },
      ],
      "firstName": "MUSTERI",
      "isCorporate": false,
      "isEmailMasked": false,
      "isPhoneMasked": false,
      "lastName": "",
      "phone": "",
      "taxNumber": "",
      "taxOffice": "",
    },
    "order": {
      "billingAddress": {
        "addressLine1": "Adres Bilgisi Yok",
        "addressLine2": "",
        "city": "",
        "companyName": "",
        "countryCode": "TR",
        "email": "",
        "firstName": "MUSTERI",
        "isCorporate": false,
        "lastName": "",
        "phone": "",
        "postalCode": "",
        "state": "",
        "taxNumber": "",
        "taxOffice": "",
      },
      "cancelReason": "İptal Nedeni Belirtilmedi",
      "cancelSource": "SELLER",
      "customerFirstName": "MUSTERI",
      "customerLastName": "",
      "dates": {
        "deliveredDate": undefined,
        "estimatedDeliveryDate": undefined,
        "externalUpdatedAt": undefined,
        "orderDate": 2026-05-05T05:05:05.000Z,
        "shippedDate": undefined,
      },
      "externalOrderId": "pk",
      "externalStatus": "UnSupplied",
      "financials": {
        "currencyCode": "TRY",
        "grandTotal": 0,
        "shippingFee": 0,
        "subTotal": 0,
        "totalDiscount": 0,
        "totalTax": 0,
      },
      "flags": {
        "isAllocated": false,
        "isInvoiceGenerated": false,
        "isMetricsProcessed": false,
      },
      "fulfillment": [
        {
          "campaignCode": "",
          "carrierCode": "",
          "carrierName": "",
          "desi": 0,
          "shipmentMethod": "MARKETPLACE",
          "status": "PENDING",
          "trackingCode": "",
          "trackingUrl": "",
        },
      ],
      "integrationCode": "trendyol",
      "internalStatus": "CANCELLED",
      "invoice": {
        "invoiceLink": undefined,
        "invoiceMethod": "MARKETPLACE",
        "invoiceProvider": "TRENDYOL",
        "invoicedAt": undefined,
        "status": "PENDING",
      },
      "items": [],
      "meta": {
        "commercial": false,
        "etgbDate": undefined,
        "etgbNo": undefined,
        "giftBox": false,
        "lines": [],
        "micro": false,
        "packageId": "pk",
        "paymentMethod": undefined,
        "status": "UnSupplied",
      },
      "orderNumber": "pk",
      "shippingAddress": {
        "addressLine1": "Adres Bilgisi Yok",
        "addressLine2": "",
        "city": "",
        "companyName": "",
        "countryCode": "TR",
        "email": "",
        "firstName": "MUSTERI",
        "isCorporate": false,
        "lastName": "",
        "phone": "",
        "postalCode": "",
        "state": "",
        "taxNumber": "",
        "taxOffice": "",
      },
    },
  },
]
`;
